<resources>
    <string name="app_name" translatable="false">VideoMood Admin</string>
    <string name="connect">Connect</string>
    <string name="select_device_to_connect">Select device to connect</string>
    <string name="none_paired">No devices paired</string>
    <string name="scanning">Scanning</string>
    <string name="none_found">No devices found</string>
    <string name="select">Select</string>
    <string name="title_paired_devices">Paired devices</string>
    <string name="scan">Scan</string>
    <string name="state_connected">Connected</string>
    <string name="state_connecting">Connecting</string>
    <string name="state_not_connected">Not connected</string>
    <string name="state_unknown">Unknown</string>
    <string name="defaultPercentFormatString" translatable="false">%d%%</string>
    <string name="videoNotPlayed"><![CDATA[<Video Not Playing>]]></string>
    <string name="headset">Headset</string>
    <string name="headset_on">Headset On</string>
    <string name="muse" translatable="false">Muse</string>
    <string name="muse_on">Muse On</string>
    <string name="previous">Previous</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="defaultUser_firstname">Vasya</string>
    <string name="defaultUser_lastname">Pupkin</string>
    <string name="calm">Calm</string>
    <string name="warning">Warning</string>
    <string name="users">Users</string>
    <string name="createUser">Create user</string>
    <string name="first_name">First name</string>
    <string name="last_name">Last name</string>
    <string name="confirm">Confirm</string>
    <string name="sex">Sex</string>
    <string name="cancel">Cancel</string>
    <string name="male">Male</string>
    <string name="birthdate">Birth date</string>
    <string name="seances">Seances</string>
    <string name="female">Female</string>
    <string name="default_birthdate" translatable="false">01.01.1999</string>
    <string name="user_card">User card</string>
    <string name="create_user">Create</string>
    <string name="no_seances">No seances</string>
    <string name="no_users">No users</string>
    <string name="user_create_error">Unable to create user</string>
    <string name="no_data">No items available</string>
    <string name="start_session">Start seance</string>
    <string name="deleteUserDialogTittle">Delete?</string>
    <string name="deleteUserDialogMessage">Are you sure you want to delete user %s?</string>
    <string name="finish_session">Finish\nSeance</string>
    <string name="seance">Seance</string>
    <string name="date">Date</string>
    <string name="from">From</string>
    <string name="default_timefrom" translatable="false">15:10</string>
    <string name="to">To</string>
    <string name="default_timeto" translatable="false">15:58</string>
    <string name="press_back_again_to_exit">Press BACK again to exit</string>
    <string name="data">Data</string>
    <string name="screenshot">Screenshot</string>
    <string name="default_action">No action</string>
    <string name="action" >Action</string>
    <string name="comment">Comment</string>
    <string name="default_comment">No comment</string>
    <string name="save">Save</string>
    <string name="edit">Edit</string>
    <string name="seanceCreateError">Unable to save seance data</string>
    <string name="seanceNotFoundError">Unable to find seance</string>
    <string name="videos">Videos</string>
    <string name="remove">Remove</string>
    <string name="deleteSeanceDialogTittle">Delete Seance</string>
    <string name="deleteSeanceDialogMessage">Delete seance data %s?</string>
    <string name="connectingProgressTitle">Connecting in progress</string>
    <string name="connectionProgressMessage">Video list refreshing</string>
    <string name="reconnect_muse_header">Reconnect?</string>
    <string name="reconnect_muse_message">Connection to Muse lost. Do you want to connect again?</string>
    <string name="reconnect_headset_header">Reconnect?</string>
    <string name="reconnect_headset_message">Connection to Headset lost. Do you want to connect again?</string>
    <string name="no">No</string>
    <string name="reconnect">Reconnect</string>
    <string name="BLUETOOTH_NOT_ENABLED_MESSAGE">Unable to connect to device because BlueTooth is disabled</string>
</resources>
