<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:baselineAligned="false">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/usersListViewLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp">

        <TextView
            android:text="@string/users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView"
            android:theme="@style/header"
            android:padding="5dp" />

        <ListView
            android:id="@+id/usersListView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">
        </ListView>

        <TextView
            android:text="@string/no_users"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/users_nodata"
            android:padding="5dp"
            android:visibility="gone"
            android:gravity="center" />

        <Button
            android:id="@+id/createUserBtn"
            android:text="@string/create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/userCreateLayout"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="10dp"
        android:visibility="visible">

        <TextView
            android:text="@string/create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:theme="@style/header" />

        <TextView
            android:text="@string/first_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/firstname_textbox"
            android:text="@string/defaultUser_firstname" />

        <TextView
            android:text="@string/last_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/lastname_textbox"
            android:text="@string/defaultUser_lastname" />

        <TextView
            android:text="@string/birthdate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView2"
            android:padding="5dp" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="date"
            android:ems="10"
            android:id="@+id/birthdate_editbox"
            android:text="@string/default_birthdate" />

        <TextView
            android:text="@string/sex"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/textView3"
            android:padding="5dp" />

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/sex_radiogroup" >

            <RadioButton
                android:text="@string/male"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/users_create_sex_male"
                android:layout_weight="1"
                android:checked="true" />

            <RadioButton
                android:text="@string/female"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/users_create_sex_female"
                android:layout_weight="1" />
        </RadioGroup>

        <Button
            android:id="@+id/confirmCreateUserBtn"
            android:text="@string/create_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/accentButton" />

        <Button
            android:text="@string/cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/cancelCreateUserBtn" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/usercard"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/user_card"
                android:theme="@style/header"
                android:padding="5dp" />

            <TextView
                android:text="@string/first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/cardLabel" />

            <TextView
                android:text="@string/defaultUser_firstname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usercard_firstname"
                android:theme="@style/cardValue" />

            <TextView
                android:text="@string/last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/cardLabel" />

            <TextView
                android:text="@string/defaultUser_lastname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usercard_lastname"
                android:theme="@style/cardValue" />

            <TextView
                android:text="@string/birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/cardLabel" />

            <TextView
                android:text="@string/default_birthdate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usercard_birthdate"
                android:theme="@style/cardValue" />

            <TextView
                android:text="@string/sex"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/cardLabel" />

            <TextView
                android:text="@string/male"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/usercard_sex"
                android:theme="@style/cardValue" />

            <TextView
                android:text="@string/seances"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:theme="@style/cardLabel" />

            <ListView
                android:id="@+id/usercard_seances"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:padding="5dp">
            </ListView>

            <TextView
                android:id="@+id/usercard_seances_nodata"
                android:text="@string/no_seances"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:theme="@style/cardValue"
                android:gravity="center" />

            <Button
                android:id="@+id/startSessionBtn"
                android:text="@string/start_session"
                android:theme="@style/accentButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>
    </ScrollView>

</LinearLayout>