<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <TextView
        android:text="@string/default_birthdate"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/seanceitem_date"
        android:layout_weight="1"
        android:padding="5dp"
        android:gravity="center" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/seanceitem_from"
        android:layout_weight="1"
        android:gravity="right|center_vertical"
        android:text="@string/default_timefrom" />

    <TextView
        android:text="@string/default_timeto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/seanceitem_to"
        android:layout_weight="1"
        android:gravity="left|center_vertical" />
</LinearLayout>